<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/cardview_light_background">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_theme_light_onPrimaryContainer"
        android:text="@string/titulo"
        android:textSize="45dp" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPalabra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_theme_light_primary"
        android:text="@string/instrucciones"
        android:textSize="25dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/instrucciones"
        android:padding="10dp"
        android:textColorHint="@color/md_theme_light_shadow"
        app:startIconDrawable="@drawable/ic_baseline_text_fields_24"
        app:startIconContentDescription="string">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPalabra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:textColor="@color/md_theme_light_shadow" />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20dp"
        style="?attr/materialButtonOutlinedStyle"
        android:text="@string/Comenzar" />


</LinearLayout>
